--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,61 +1,12 @@
-{% load static %}
-<!doctype html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lui Cabrone</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="shortcut icon" href="{% static 'imgs/logo.png' %}">
-</head>
-<body>
-    <div class="mainContent">
-        <img class="mainImage" src="{% static 'imgs/4.jpg' %}">
-        <div class="darker"></div>
-         <nav class="navbar navbar-light bg-light">
-          <div class="container-fluid" style="z-index: 200">
-            <a class="navbar-brand d-flex flex-row" href="#">
-              <img src="{% static 'imgs/icon.png' %}" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                <p class="mainTitle">Lui Cabrone</p>
-            </a>
-
-            <div style="display: flex; flex-direction: row">
-                <div class="conmt">
-                     <a class="sideLink" href=""><img  src="{% static 'imgs/home-solid.svg' %}" alt="" width="24" height="20" class="d-inline-block align-text-top sideOPT"></a>
-                </div>
-                <div class="conmt" >
-                    <a class="sideLink" href=""><img src="{% static 'imgs/shopping-cart-solid.svg' %}" alt="" width="24" height="20" class="d-inline-block align-text-top sideOPT"></a>
-                </div>
-                <div class="conmt" style="margin">
-                    <a class="sideLink" href=""><img src="{% static 'imgs/cog-solid.svg' %}" alt="" width="24" height="20" class="d-inline-block align-text-top sideOPT"></a>
-                </div>
-
-            </div>
-
-
-          </div>
-        </nav>
-
-
-        <div class="mainContentBody">
-            <div class="mainContentBodyLeft">
-                <p class="welcome">Seje Bem-Vindo, </p>
-                <p class="mainDescribe">Somos a <span style="font-family: 'Lobster', cursive;">Lui Cabrone</span> e temos as melhores pizzas e guloseimas do mundo.</p>
-                <button type="button"  class="btn btn-outline-light buyBtn">Comprar Pizza</button>
-            </div>
-            <div class="mainContentBodyRight">
-                <img src="{% static 'imgs/cara.png' %}" alt="" class="imgMano">
-            </div>
-
+{% extends 'base.html' %}
+{% load static %}    
+{% block body %}
+        <div class="mainContentBodyLeft">
+            <p class="welcome">Seje Bem-Vindo, </p>
+            <p class="mainDescribe">Somos a <span style="font-family: 'Lobster', cursive;">Lui Cabrone</span> e temos as melhores pizzas e guloseimas do mundo.</p>
+            <a href="{% url 'pedido' %}"><button type="button"  class="btn btn-outline-light buyBtn">Comprar Pizza</button><a>
         </div>
-
-
-    </div>
-</body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</html>
+        <div class="mainContentBodyRight">
+            <img src="{% static 'imgs/cara.png' %}" alt="" class="imgMano">
+        </div>
+{% endblock %}
