--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,12 +32,13 @@ body{
 }
 .mainContentBody{
     width: 100%;
-    height: 80%;
-    position: relative;
+    bottom: 0;
+    top: 0;
+    position: absolute;
     color: #f2f7f2;
     display: flex;
     align-items: center;
-    padding: 100px;
+    padding: 0;
     z-index: 100;
     flex-direction: row;
 }
@@ -94,7 +95,7 @@ body{
 
 @media screen and (max-width: 770px) {
     .mainContentBody{
-        padding: 20px
+        padding: 0 10px 0 10px;
     }
 }
 @media screen and (max-width: 620px) {
