--- a/static/css/cardapio.css
+++ b/static/css/cardapio.css
@@ -20,15 +20,18 @@
 .cardPizzaImg{
 	padding: 0 0 0 0;
 	width: 100%;
-	height: 70%;
+	height: 80%;
 	background-color: none;
+	overflow: hidden;
+
 }
 .cardPizzaImg > .cardImg{
-	width: 120%;
+	width: 130%;
 	height: 80%;
-	position: relative;
-	margin-left: 10%;
+
+	margin-left: 5%;
 	margin-top: -10%;
+	object-fit: fill;
 }
 
 .cardPizzaText{
