--- a/static/css/cardapio.css
+++ b/static/css/cardapio.css
@@ -1,41 +1,141 @@
 .allBodyContent{
+	position: absolute;
 	display: flex;
-
-  	justify-content: center;
+  	flex-direction: row;
+	justify-content: center;
   	width: 100%;
-
+	align-content: flex-start;
+	justify-content: center;
 	margin: auto; 
-	height: calc(100% - 70px);
+	height: auto;
 	margin-top: 70px;
 	background-color: #1c1e2b;
 	flex-wrap: wrap;
+	top: 0;
+}
+.mainBg{
+	background-color:#1c1e2b;
+	position: absolute;
+	width: 100%;
+	height: calc(100% - 70px);
+	top: 70px;
 }
 .cardPizza{
-	display: inline-block;
+	cursor: pointer;
+	display: inline;
 	width: 200px;
-	height: 250px;
+	height: 200px;
 	background-color: #2D3047;
 	margin: 20px;
+	border-radius: 5px;
+	
 }
 .cardPizzaImg{
 	padding: 0 0 0 0;
 	width: 100%;
-	height: 80%;
+	height: 70%;
 	background-color: none;
 	overflow: hidden;
 
 }
 .cardPizzaImg > .cardImg{
-	width: 130%;
-	height: 80%;
-
+	width: 135%;
+	height: 110%;
 	margin-left: 5%;
 	margin-top: -10%;
 	object-fit: fill;
 }
 
 .cardPizzaText{
+	background-color: none;
 	width: 100%;
 	height: 30%;
-	background-color: none;
+	display: flex;
+	flex-direction: column;
+}
+.pizzaNameText{
+	width: 100%;
+	height: 50%;
+	margin-bottom: 0;
+	text-align: start;
+	padding-left: 10px;
+	font-size: 18px;
+}
+.pizzaPriceText{
+	display: block;
+	width: 100%;
+	height: 50%;
+	margin-bottom: 0;
+	text-align: right;
+	padding-right: 10px;
+	font-size: 18px;
+}
+.popupBg{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 200;
+	position: absolute;
+	display:none
+}
+
+.popup{
+	width: 60%;
+	height: 60%;
+	position:fixed;
+	z-index: 200;
+	background-color: #2D3047;
+	top: 50%; 
+	right: 50%;
+	display: none;
+	transform: translate(50%,-50%);
+	border-radius: 10px;
+}
+.btnClosePop{
+	cursor: pointer;
+	position: absolute;
+	right: 5px;
+	top: 5px;
+}
+
+
+
+
+
+@media screen and (max-width: 500px) {
+	.allBodyContent{
+		flex-direction: column;
+	}
+    .cardPizza{
+		background-color: #2D3047;
+		height:60px;
+		display: flex;
+		flex-direction: row;
+		width: calc(100% - 20px);
+		margin: 10px 10px 0 10px;
+	}
+	.cardPizzaImg{
+		width: 30%;
+		height: 100%;
+	}
+	.cardPizzaImg > .cardImg{
+		transform: rotateY(180deg);
+		margin-left: -50%;
+		margin-top: -5%;
+	}
+	.cardPizzaText{
+		flex-direction: row;
+		height: 100%;
+	}
+	.cardPizzaText > p {
+		width: 50%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		font-size: 16px;
+	}
+	.pizzaPriceText {
+		display: flex;
+		justify-content: right;
+	}
 }
