--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,18 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&family=Nanum+Myeongjo:wght@700&display=swap');
 body{
-    width: 100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
 
 }
 .mainContent{
-    width: 100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
 }
 
 .mainImage{
-    width: 100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
     object-fit: cover;
     position: absolute;
     z-index: 1;
@@ -24,8 +24,8 @@ body{
     margin-left: 20px
 }
 .darker{
-    width: 100vw;
-    height:100vh;
+    width: 100%;
+    height:100%;
     position: absolute;
     z-index: 2;
     background-color: rgba(0,0,0,.65)
@@ -94,13 +94,9 @@ body{
 }
 
 @media screen and (max-width: 770px) {
-    .mainContentBody{
+    .mainContentBodyLeft{
+        width: 100%;
         padding: 0 10px 0 10px;
     }
 }
-@media screen and (max-width: 620px) {
-    .mainContentBodyLeft{
-        width: 100%;
-        padding-left: 10px
-    }
-}
+
