--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <div class="conmt" >
                     <a class="sideLink" href=""><img src="{% static 'imgs/shopping-cart-solid.svg' %}" alt="" width="24" height="20" class="d-inline-block align-text-top sideOPT"></a>
                 </div>
-                <div class="conmt" style="margin">
+                <div class="conmt" >
                     <a class="sideLink" href=""><img src="{% static 'imgs/cog-solid.svg' %}" alt="" width="24" height="20" class="d-inline-block align-text-top sideOPT"></a>
                 </div>
 
@@ -50,4 +50,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+{% block script %}
+{% endblock %}
 </html>
