--- a/static/css/cardapio.css
+++ b/static/css/cardapio.css
@@ -20,6 +20,68 @@
 	height: calc(100% - 70px);
 	top: 70px;
 }
+
+.popupBg{
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 200;
+	position: fixed;
+	display:none
+}
+
+.popup{
+	width: 60%;
+	height: 60%;
+	position:fixed;
+	z-index: 200;
+	background-color: #2D3047;
+	top: 50%; 
+	right: 50%;
+	display: none;
+	transform: translate(50%,-50%);
+	border-radius: 10px;
+}
+.btnClosePop{
+	cursor: pointer;
+	position: absolute;
+	right: 5px;
+	top: 5px;
+}
+
+.popup > .cardPizza{
+	background-color: #2D3047;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	top: 0;
+	position: absolute;	
+
+}
+.popup > .cardPizza > .cardPizzaImg{
+	width: 50%;
+	height: auto;
+	position: absolute;
+	right: 0;
+
+}
+
+.popup > .cardPizza > .cardPizzaText{
+	flex-direction: column;
+
+}
+.popup > .cardPizza > .cardPizzaText > .pizzaNameText  {
+	font-size: 40px;
+
+}
+.popup > .cardPizza > .cardPizzaText > .pizzaPriceText  {
+	text-align:left;
+	font-size: 40px;
+	position: absolute;
+	bottom: 20px;
+	left: 20px;
+	height: auto;
+}
 .cardPizza{
 	cursor: pointer;
 	display: inline;
@@ -40,7 +102,7 @@
 }
 .cardPizzaImg > .cardImg{
 	width: 135%;
-	height: 110%;
+	height : auto;
 	margin-left: 5%;
 	margin-top: -10%;
 	object-fit: fill;
@@ -70,33 +132,7 @@
 	padding-right: 10px;
 	font-size: 18px;
 }
-.popupBg{
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
-	z-index: 200;
-	position: absolute;
-	display:none
-}
 
-.popup{
-	width: 60%;
-	height: 60%;
-	position:fixed;
-	z-index: 200;
-	background-color: #2D3047;
-	top: 50%; 
-	right: 50%;
-	display: none;
-	transform: translate(50%,-50%);
-	border-radius: 10px;
-}
-.btnClosePop{
-	cursor: pointer;
-	position: absolute;
-	right: 5px;
-	top: 5px;
-}
 
 
 
