--- a/static/css/cardapio.css
+++ b/static/css/cardapio.css
@@ -32,7 +32,7 @@
 
 .popup{
 	width: 60%;
-	height: 60%;
+	height: 520px;
 	position:fixed;
 	z-index: 200;
 	background-color: #2D3047;
@@ -58,6 +58,37 @@
 	position: absolute;	
 
 }
+.popup > .cardPizza > .addCartBtn{
+	display: block;
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+
+}
+.popup > .cardPizza > .data{
+	display: block;
+	position: absolute;	
+	top: 20%;
+	left: 5%;
+	background-color:none;
+	width: 50%;
+	height: auto;
+
+}
+.popup > .cardPizza > .data >  .dataInfo > .listIngredients{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+
+}
+.popup > .cardPizza > .data >  .dataInfo > .listIngredients > li{
+	margin: 10px;
+	
+}
+.popup > .cardPizza > .data >  .dataInfo > .listIngredients > li > span{
+	position: relative;
+	left: -10px;
+}
 .popup > .cardPizza > .cardPizzaImg{
 	width: 50%;
 	height: auto;
@@ -72,6 +103,8 @@
 }
 .popup > .cardPizza > .cardPizzaText > .pizzaNameText  {
 	font-size: 40px;
+	z-index: 300;
+	background-color: rgba(0, 0, 0, 0.3);
 
 }
 .popup > .cardPizza > .cardPizzaText > .pizzaPriceText  {
@@ -91,6 +124,19 @@
 	margin: 20px;
 	border-radius: 5px;
 	
+}
+.addCartBtn{
+	color: white;
+	background-color: #D03030;
+	border: none;
+	outline: 0;
+	border-radius: 10px;
+	height: 30px;
+	display: none;
+	width: 250px;
+}
+.data{
+	display: none;
 }
 .cardPizzaImg{
 	padding: 0 0 0 0;
@@ -175,3 +221,96 @@
 		justify-content: right;
 	}
 }
+
+@media screen and (max-width: 960px) {
+	.popup > .cardPizza > .data{
+		width: 98%;
+		top: 25%;
+		padding: 0
+	}
+	.popup > .cardPizza > .data > .dataInfo > .listIngredients{
+		padding: 0
+	}
+}
+
+@media screen and (max-width: 680px) {
+	.popup > .cardPizza > .addCartBtn{
+		width: auto;
+	}
+	
+	.popup > .cardPizza > .cardPizzaText > .pizzaNameText  {
+		font-size: 30px;
+	
+	}
+	.popup > .cardPizza > .cardPizzaText > .pizzaPriceText{
+		font-size: 30px;
+	}
+	.popup > .cardPizza > .data{
+		width: 98%;
+		top: 20%;
+		padding: 0
+	}
+}
+
+
+@media screen and (max-width: 500px) {
+	.popup > .cardPizza >  .cardPizzaImg{
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
+	.popup > .cardPizza >  .cardPizzaImg > .cardImg{
+		width: 100%;
+		height: auto
+	}
+	.popup > .cardPizza > .cardPizzaText {
+		flex-direction:row;
+		width: 100%;
+		height: 100%;
+	}
+	.popup > .cardPizza > .cardPizzaText > .pizzaNameText{
+		text-align:center;
+		width: 100%;
+		background-color: none;
+		position: absolute;
+		
+		height: 60px;
+		text-align: right;
+		justify-content: right;
+		padding: 0;
+	}
+	.popup > .cardPizza > .cardPizzaText > .pizzaPriceText{
+		width: auto;
+		text-align: left;
+		position: absolute;
+		left: 10px;
+		bottom: 10px;
+
+	}
+	.popup {
+		width: 90%;
+	}
+	.popup > .cardPizza > .data{
+		top: 35%;
+	}
+}
+
+@media screen and (max-width: 430px) {
+	.popup > .cardPizza > .data{
+		top: 25%;
+	}
+	.dataHeader{
+		position: absolute;
+		right: 70px;
+		top: -20px;
+		
+	}
+	.listIngredients{
+
+		width: 95%;
+		justify-content: center;
+	}
+}
+
+
+
